feature: Extend Gateway Metrics with Connected Devices counter
Details:
- Expose known connected devices counter with particular gateway
in GetStat API.
